fix: z-index of header

--- a/css/style.css
+++ b/css/style.css
@@ -132,6 +132,7 @@ input:focus {
     top: 0;
     left: 0;
     width: 100%;
+    z-index: 1000;
   }
 }
 
