--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -8,5 +8,6 @@
     top: 0;
     left: 0;
     width: 100%;
+    z-index: 1000;
   }
 }
